added great stuff in Git

--- a/2025-04-06_tighub.md
+++ b/2025-04-06_tighub.md
@@ -1,4 +1,6 @@
-# Notes today on Git
+# Notes today on Tig
+
+I do not like git word, hence change the word reverse i.e. tig (There is GOD).
 
 Important files which are part of any Git Project/Repo
 
@@ -15,4 +17,36 @@ Important files which are part of any Git Project/Repo
 ```bash
 git init -b main # <- single step, you init repo and with name main (instead of master)>
 git add . && git commit -m "initial commit"
+
+# create branch switch in a single command
+git switch -c your-new-branch-name
+
 ```
+Normally, you can simply remove the remote url but there is nice way to do
+
+`git remote set-url origin git@github.com:your-username/your_repo.git`
+
+(＾◡＾) - older method which I use to use, is git remote remove origin
+
+when you wish to push the changes you made to your fork, [esp when you follow this guide](https://github.com/pmz2025/first-contributions)
+
+```bash
+git push -u origin <branchName> # <-- the branch name is created on your remote repo as well
+
+```
+
+[How to clean up things after contribution](https://github.com/firstcontributions/first-contributions/blob/main/docs/additional-material/git_workflow_scenarios/removing-branch-from-your-repository.md)
+
+But I'm repeating here
+
+```bash
+
+git branch main # switching to main branch
+git merge <branchname> main # merge branch name with main
+git branch -d <branchname> # delete branch from local repo
+git push origin --delete <branchname> # delete branch from github
+
+```
+## Reference
+
+[Great Resource](https://github.com/firstcontributions/first-contributions/tree/main/docs/additional-material/git_workflow_scenarios)
